# Herald-Bot

./: .replit  LICENSE  README.md  SECURITY.md  alltime_messages.csv  index.md  launcher.py  main.py  plot_weekdays.py  pyproject.toml
.github/workflows/: codeql-analysis.yml
conda_envs/: 2021-05-08_cg-env.txt
data/: alltime_memberflow.csv  alltime_voice.csv
data/db/: build.sql
lib/bot/: __init__.py
lib/cogs/: fun.py  misc.py
lib/db/: db.py
scripts/: userinfo.py
