[tool.poetry]
name = "repl_python3_Herald-Bot"
version = "0.1.0"
description = ""
authors = ["xxscorchxx5 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
pandas = "^1.2.4"
flask = "^1.1.2"
lib = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
